--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 }
 </script>
   <link rel="stylesheet" href="/index.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body class="bg-gray-50 text-gray-900 antialiased">
